// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchWidget should be able to filter by admin 1`] = `
<div
  class="pf-c-data-toolbar DataToolbar-class"
  data-testid="data-toolbar"
  id="data-list"
>
  <div
    class="pf-c-data-toolbar__content"
  >
    <div
      class="pf-c-data-toolbar__content-section"
    >
      <div
        class="pf-c-data-toolbar__item"
      >
        <div
          class="pf-c-data-toolbar__group pf-m-filter-group"
        >
          <div
            class="pf-c-select"
          >
            <button
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-labelledby=" pf-toggle-id-1"
              class="pf-c-select__toggle"
              id="pf-toggle-id-1"
              type="button"
            >
              <div
                class="pf-c-select__toggle-wrapper"
              >
                <span
                  class="pf-c-select__toggle-icon"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M487.976 0H24.028C2.71 0-8.047 25.866 7.058 40.971L192 225.941V432c0 7.831 3.821 15.17 10.237 19.662l80 55.98C298.02 518.69 320 507.493 320 487.98V225.941l184.947-184.97C520.021 25.896 509.338 0 487.976 0z"
                      transform=""
                    />
                  </svg>
                </span>
                <span
                  class="pf-c-select__toggle-text"
                >
                  Admin
                </span>
              </div>
              <svg
                aria-hidden="true"
                class="pf-c-select__toggle-arrow"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 320 512"
                width="1em"
              >
                <path
                  d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                  transform=""
                />
              </svg>
            </button>
          </div>
          <div
            class="pf-c-data-toolbar__item"
          >
            <span />
          </div>
          <div
            class="pf-c-data-toolbar__item"
          >
            <span />
          </div>
          <div
            class="pf-c-data-toolbar__item"
          >
            <span />
          </div>
          <div
            class="pf-c-input-group"
          >
            <input
              aria-invalid="false"
              aria-label="Aria label of the text input for filtering"
              class="pf-c-form-control"
              placeholder="Filter by Admin"
              type="search"
              value=""
            />
            <button
              aria-label="Aria label for button"
              class="pf-c-button pf-m-control"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 512 512"
                width="1em"
              >
                <path
                  d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                  transform=""
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-c-data-toolbar__expandable-content"
      id="data-list-expandable-content-3"
    >
      <div
        class="pf-c-data-toolbar__group"
      />
    </div>
  </div>
  <div
    class="pf-c-data-toolbar__content pf-m-hidden"
    hidden=""
  >
    <div
      class="pf-c-data-toolbar__group"
    />
  </div>
</div>
`;

exports[`SearchWidget should render correctly 1`] = `
<div
  class="pf-c-toolbar__item"
  data-testid="search-widget"
>
  <div
    class="pf-c-toolbar__group pf-m-filter-group"
  >
    <div
      class="pf-c-select"
      data-ouia-component-id="0"
      data-ouia-component-type="PF4/Select"
      data-ouia-safe="true"
    >
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-labelledby=" pf-toggle-id-0"
        class="pf-c-select__toggle"
        id="pf-toggle-id-0"
        type="button"
      >
        <div
          class="pf-c-select__toggle-wrapper"
        >
          <span
            class="pf-c-select__toggle-icon"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 512 512"
              width="1em"
            >
              <path
                d="M487.976 0H24.028C2.71 0-8.047 25.866 7.058 40.971L192 225.941V432c0 7.831 3.821 15.17 10.237 19.662l80 55.98C298.02 518.69 320 507.493 320 487.98V225.941l184.947-184.97C520.021 25.896 509.338 0 487.976 0z"
                transform=""
              />
            </svg>
          </span>
          <span
            class="pf-c-select__toggle-text"
          >
            Admin
          </span>
        </div>
        <span
          class="pf-c-select__toggle-arrow"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
              transform=""
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="pf-c-toolbar__item"
    >
      <span />
    </div>
    <div
      class="pf-c-toolbar__item"
    >
      <span />
    </div>
    <div
      class="pf-c-toolbar__item"
    >
      <span />
    </div>
    <div
      class="pf-c-input-group"
    >
      <input
        aria-invalid="false"
        aria-label="accountsIndex:accounts_filter_field_aria_label"
        class="pf-c-form-control"
        placeholder="accountsIndex:accounts_filter_field"
        type="search"
        value=""
      />
      <button
        class="pf-c-button pf-m-control"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe="true"
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
            transform=""
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
